--- a/blog/_posts/2020-08-20-Narya.md
+++ b/blog/_posts/2020-08-20-Narya.md
@@ -33,17 +33,17 @@ MathJax.Hub.Queue(function() {
 
 ![]({{ site.url }}/imgs/2020-08-20-Narya/full-intro.png)
 
-This blog post is the markdown version of a list of Jupyter Notebooks you can find inside [Narya's repository](https://github.com/DonsetPG/narya). This post allows to have each notebook at the same place. It will probably be replaced by a Jupyter Book whenever I find the time and the solution to integrate them into this blog.
+This blog post is the markdown version of a list of Jupyter Notebooks you can find inside [Narya's repository](https://github.com/DonsetPG/narya). This post allows to have each Notebook at the same place. It will probably be replaced by a Jupyter Book whenever I find the time and the solution to integrate them into this blog.
 
 # Narya
 
-The Narya API allows you track soccer player from camera inputs, and evaluate them with an Expected Discounted Goal (EDG) Agent. This repository contains the implementation of the [following paper](https://). We also make available all of our pretrained agents, and the datasets we used as well. 
+The Narya API allows you to track soccer player from camera inputs, and evaluate them with an Expected Discounted Goal (EDG) Agent. This repository contains the implementation of the [following paper](https://). We also make available all of our trained agents, and the datasets we used as well. 
 
-The goal of this Notebook is to allow anyone without any access to soccer data to produce its own and to analyse them with powerfull tools. We also hope that by releasing our training procedures and datasets, better models will emerge and make this tool better iteratively. 
+This Notebook's goal is to allow anyone without any access to soccer data to produce its own and analyze them with powerful tools. We also hope that by releasing our training procedures and datasets, better models will emerge and make this tool better iteratively. 
 
 # Framework 
 
-Our library is split in 2: one part is to track soccer players, another one is to process these trackings and evalute them. Let's start by focusing on how to track soccer players.
+Our library is split in 2: one part is to track soccer players, another one is to process these trackings and evaluate them. Let's start by focusing on how to track soccer players.
 
 # Installation
 
@@ -55,7 +55,7 @@ or from source:
 
 ```git clone && cd narya && python3 setup.py```
 
-Let's start by importing some libraries and an image we will use during this notebook: 
+Let's start by importing some libraries and an image we will use during this Notebook: 
 
 
 ```python
@@ -97,8 +97,8 @@ You can easily:
 * Load weights for this model 
 * Call this model 
 
-We tried to keep a similar architecture for each model, even with different framework.
-For example, each model deals on itself with image pre-processing, reshaping and so on: a simple ```__call__``` is enough.
+We tried to keep a similar architecture for each model, even with a different framework.
+For example, each model deals on itself with image preprocessing, reshaping, and so on: a simple ```__call__``` is enough.
 
 Let's start by importing a tracking model:
 
@@ -111,9 +111,9 @@ import tensorflow as tf
 tracker_model = TrackerModel(pretrained=True, backbone='ssd_512_resnet50_v1_coco')
 ```
 
-and load our pretrained weights: 
+and load our pre-trained weights: 
 
-**Note:** When a ```TrackerModel``` gets instanciate more than once, weights won't load succesfully. Make sure to restart the kernel in this case
+**Note:** When a ```TrackerModel``` gets instantiate more than once, weights won't load successfully. Make sure to restart the kernel in this case.
 
 
 ```python
@@ -142,15 +142,15 @@ plt.show()
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_10_0.png)
 
 
-Now that we have players' coordinates (and the ball position), we need to be able to transform these coordinates into 2D coordinates. This means finding the homography between our input image, and a 2D representation of the field: 
+Now that we have players' coordinates (and the ball position), we need to be able to transform them into 2D coordinates. This means finding the homography between our input image and a 2D representation of the field: 
 
 ![]({{ site.url }}/imgs/2020-08-20-Narya/homography-estimation.png)
 
 ### Homography Estimations
 
-We developped 2 methods to ensure more robust estimations of the current homography. The first one is a direct prediction, and the second one computes the homography from the detection of some particular keypoints. Let's start with the direct prediction: $\mathbb{R} ^ {n \times n \times 3} \to \mathbb{R} ^ {3 \times 3}$. 
+We developed 2 methods to ensure more robust estimations of the current homography. The first one is a direct prediction, and the second one computes the homography from the detection of some particular keypoints. Let's start with the direct prediction: $\mathbb{R} ^ {n \times n \times 3} \to \mathbb{R} ^ {3 \times 3}$. 
 
-The model is based on a Resnet-18 architecture and takes images of shape $(280,280)$. It was implemented with Keras. Let's review it's architecture, which is kept the same for each model no matter its framework. 
+The model is based on a Resnet-18 architecture and takes images of shape $(280,280)$. It was implemented with Keras. Let's review its architecture, which is kept the same for each model, no matter its framework. 
 
 Each model is created with:
 * The shape of its input
@@ -277,7 +277,7 @@ visualize(image=image,warped_template=cv2.resize(pred_warp, (1024,1024)))
 
 You can also merge the warped template with your example: 
 
-**Notes**: Usually, this homography is only used to compute the coordinates of each players.
+**Notes**: Usually, this homography is only used to compute the coordinates of each player.
 
 
 ```python
@@ -290,7 +290,7 @@ visualize(image = test)
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_20_0.png)
 
 
-Our second approach is based on keypoints detection: $\mathbb{R} ^ {n \times n \times 3} \to \mathbb{R} ^ {p \times n \times n}$ we predict $p$ masks, each mask representing a particular keypoint on the field. The homography is computed knowing the coordinates of available keypoints on the image, by mapping them to the keypoints coordinates of the 2-dimensional field. The model is based on an EfficientNetb-3 backbone on top of a Feature Pyramid Networks (FPN) architecture to predict the mask of each keypoint. We implemented our model using Segmentation Models.
+Our second approach is based on keypoints detection: $\mathbb{R} ^ {n \times n \times 3} \to \mathbb{R} ^ {p \times n \times n}$ we predict $p$ masks, each mask representing a particular keypoint on the field. The homography is computed knowing the coordinates of available keypoints on the image, by mapping them to the keypoints coordinates of the 2-dimensional field. The model is based on an EfficientNetb-3 backbone on top of a Feature Pyramid Networks (FPN) architecture to predict each keypoint's mask. We implemented our model using Segmentation Models.
 
 Again, let's start by quickly creating our model and making some predictions: 
 
@@ -324,9 +324,9 @@ visualize(
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_22_1.png)
 
 
-Here, we display a concatenation of each keypoints we predicted. Now, since we know the "true" coordinates of each of them, we can precisely compute the parameters of the related homography. 
+Here, we display a concatenation of each keypoints we predicted. Now, since we know the "true" coordinates of each of them, we can precisely compute the related homography parameters. 
 
-**Notes**: We explain here how the homography parameters are computed. This is a Supplementary Material from our paper and therefore, can be skipped.
+**Notes**: We explain here how the homography parameters are computed. This is a Supplementary Material from our paper and, therefore, can be skipped.
 
 We assume 2 sets of points $(x_1,y_1)$ and $(x_2,y_2)$ both in $\mathbb{R}^2$, and define $\mathbf{X_i}$ as $[x_i,y_i,1]^{\top}$. We define the planar homography $\mathbf{H}$ that relates the transformation between the 2 planes generated by $\mathbf{X_1}$ and $\mathbf{X_2}$ as : 
 
@@ -362,7 +362,7 @@ $$
 
 where $\mathbf{h} = [h_{11},h_{12},h_{13},h_{21},h_{22},h_{23},h_{31},h_{32}]^{\top}$. We can stack such constraints for $n$ pair of points, leading to a system of equations of the form $\mathbf{A}\mathbf{h} = 0$ where $\mathbf{A}$ is a $2n \times 8$ matrix. Given the $8$ degrees of freedom and the system above, we need at least $8$ points (4 in each plan) to compute an estimation of our homography. 
 
-This is the method we use to compute the homography fomr the keypoints prediction.
+This is the method we use to compute the homography from the keypoints prediction.
 
 Let's do it and predict an homography from these keypoints: 
 
@@ -393,13 +393,13 @@ visualize(image = test)
 
 ### ReIdentification
 
-Finally, we need to be able to say if one player from frame is the same in another frame. We use 3 tools to do so: 
+Finally, we need to be able to say if one player from the first frame is the same in another frame. We use three tools to do so: 
 
 - a Kalman filter, to remove outliers
-- the IoU distance, to ensure that one person cannot move too much in 2 consecutives frames
+- the IoU distance, to ensure that one person cannot move too much in 2 consecutive frames
 - the cosine similarity between embeddings
 
-Our last model deals with the embedding part. Once again, even as a torch model, it can be loaded and used like the rest.
+Our last model deals with the embedding part. Once again, even as a torch model, it can be loaded and used as the rest.
 
 Let's start by cropping the image of a player:
 
@@ -451,7 +451,7 @@ Given a list of images, we want to track players and the ball and gather their t
 1. their distance measured by the embedding model,
 2. their distance measured by boxes IoU's
 
-When the entire list of image is processed, we compute an homography for each image. We then apply each homography to the players coordinates.
+When the entire list of images is processed, we compute a homography for each image. We then apply each homography to the player's coordinates.
 
 
 ```python
@@ -526,7 +526,7 @@ visualize(image_0=image_0,
 
 ## Football Tracker
 
-We first need to create our tracker. This object gathers each and every one of our model: 
+We first need to create our tracker. This object gathers every one of our models: 
 
 ```python
 class FootballTracker:
@@ -674,14 +674,14 @@ with imageio.get_writer('test_outputs/movie.mp4', mode='I',fps=20) as writer:
 ##  Process trajectories 
 
 We now have raw trajectories that we need to process. 
-Fist, you can do several operations to ensure that the trajectories are good: 
+Fist, you can do several operations to ensure that the trajectories are functional: 
 
-* Delete an id at a certain frame
+* Delete an id at a specific frame
 * Delete an id from every frame
 * Merge two ids 
 * Add an id at a given frame
 
-These operation are easy to do with some of our functions from ```narya.utils.tracker```: 
+These operations are simple to do with some of our functions from ```narya.utils.tracker```: 
 
 ```python
 def _remove_coords(traj, ids, frame):
@@ -754,7 +754,7 @@ def merge_2_trajectories(traj1, traj2, id_mapper, max_frame_traj1):
     """
 ```
 
-here, let's assume we don't have to perform any operations, and directly process our trajectoris into a Pandas Dataframe. 
+Here, let's assume we don't have to perform any operations, and directly process our trajectories into a Pandas Dataframe. 
 
 First, we can save our raw trajectory with
 
@@ -903,7 +903,7 @@ To that end, we can compute the gradient of such cost function\footnote{Using a 
 
 ## Implementation 
 
-Our EDG agent was implemented using the Google Football library. We trained our agent against bots and against itself, until it became strong enough. Such agent can be seen on this [youtube video](https://www.youtube.com/watch?v=F8DcgFDT9sc).
+Our EDG agent was implemented using the Google Football library. We trained our agent against bots and against itself until it became strong enough. Such an agent can be seen on this [youtube video](https://www.youtube.com/watch?v=F8DcgFDT9sc).
 
 Let's start by importing some libraries:
 
@@ -1292,7 +1292,7 @@ We now have to change our data into a google format. To do so, we need to change
 * the Players positions and velocity 
 * Who owns the ball, and what team he is in 
 
-and transfer the coordinates in a different representation. 
+And transfer the coordinates in a different representation. 
 
 
 ```python
