--- a/blog/_posts/2020-08-20-Narya.md
+++ b/blog/_posts/2020-08-20-Narya.md
@@ -35,6 +35,8 @@ MathJax.Hub.Queue(function() {
 
 This blog post is the markdown version of a list of Jupyter Notebooks you can find inside [Narya's repository](https://github.com/DonsetPG/narya). This post allows to have each Notebook at the same place. It will probably be replaced by a Jupyter Book whenever I find the time and the solution to integrate them into this blog.
 
+This project is also an evolution from a [previous blog post](https://donsetpg.github.io/blog/2020/05/10/LiverpoolData/).
+
 # Narya
 
 The Narya API allows you to track soccer player from camera inputs, and evaluate them with an Expected Discounted Goal (EDG) Agent. This repository contains the implementation of the [following paper](https://). We also make available all of our trained agents, and the datasets we used as well. 
