--- a/blog/_posts/2020-08-20-Narya.md
+++ b/blog/_posts/2020-08-20-Narya.md
@@ -33,6 +33,13 @@ MathJax.Hub.Queue(function() {
 
 ![]({{ site.url }}/imgs/2020-08-20-Narya/full-intro.png)
 
+<center>
+<em>
+Evolution of our Tracking and EDG model over time. The EDG model learns to capture actions with potential in a very general manner, and compute such potential with the player coordinates our Tracking model gathers from the live Camera.
+</em>
+</center>
+<br/>
+
 This blog post is the markdown version of a list of Jupyter Notebooks you can find inside [Narya's repository](https://github.com/DonsetPG/narya). This post allows to have each Notebook at the same place. It will probably be replaced by a Jupyter Book whenever I find the time and the solution to integrate them into this blog.
 
 This project is also an evolution from a [previous blog post](https://donsetpg.github.io/blog/2020/05/10/LiverpoolData/).
@@ -89,6 +96,17 @@ visualize(image=image)
 ## Tracking Soccer Players
 
 ![]({{ site.url }}/imgs/2020-08-20-Narya/tracker_full.png)
+
+<center>
+<em>
+  (a) The ET model computes the position of each entity. It then passes the coordinates to the online tracker to: (1): Compute the embedding of each player, (2): Warp each coordinate with the homography from HE.
+  
+  (b) The HE starts by doing a direct estimation of the homography. Available keypoints are then predicted and used to compute another estimation of the homography. Both predictions are used to remove potential outliers.
+  
+  (c) The REID model computes an embedding for each detected player. It also compares the IoU's of each pair of players and applies a Kalman Filter to each trajectory. 
+</em>
+</center>
+<br/>
 
 ### Players detections
 
@@ -147,6 +165,14 @@ plt.show()
 Now that we have players' coordinates (and the ball position), we need to be able to transform them into 2D coordinates. This means finding the homography between our input image and a 2D representation of the field: 
 
 ![]({{ site.url }}/imgs/2020-08-20-Narya/homography-estimation.png)
+
+<center>
+<em>
+  (left) Example of a planar surface (our soccer field) viewed by two camera positions: the 2D field camera and the Live camera. Finding the homography between them allows to produce 2D coordinates for each player. 
+  (right) Example of points correspondences between the 2D Soccer Field Camera and the Live Camera. 
+</em>
+</center>
+<br/>
 
 ### Homography Estimations
 
