--- a/blog/_posts/2020-08-20-Narya.md
+++ b/blog/_posts/2020-08-20-Narya.md
@@ -44,6 +44,14 @@ This blog post is the markdown version of a list of Jupyter Notebooks you can fi
 
 This project is also an evolution from a [previous blog post](https://donsetpg.github.io/blog/2020/05/10/LiverpoolData/).
 
+We tried to make everything easy to reuse, we hope any one will be able to:
+
+* Use our datasets to train other models
+* Finetune some of our trained models
+* Use our trackers
+* Evaluate players with our EDG Agent
+* and much more
+
 # Narya
 
 The Narya API allows you to track soccer player from camera inputs, and evaluate them with an Expected Discounted Goal (EDG) Agent. This repository contains the implementation of the [following paper](https://). We also make available all of our trained agents, and the datasets we used as well. 
@@ -978,7 +986,7 @@ Let's load some tracking data from Liverpool:
 
 
 ```python
-data = pd.read_csv('~/Documents/github/ExpectedDiscountedGoal/data/Liverpool-LastRow/liverpool_2019.csv', index_col=('play', 'frame'))
+data = pd.read_csv('liverpool_2019.csv', index_col=('play', 'frame'))
 data['edgecolor'] = data['edgecolor'].fillna(0)
 data.tail()
 ```
