small change to test ssh keys

--- a/blog/_posts/2020-08-20-Narya.md
+++ b/blog/_posts/2020-08-20-Narya.md
@@ -31,7 +31,7 @@ MathJax.Hub.Queue(function() {
 </script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML-full"></script>
 
-![]({{ site.url }}/imgs/2020-08-20-Narya/full-intro.png)
+![]({{ site.url }}/imgs/2020-24-12-Narya/full-intro.png)
 
 <center>
 <em>
@@ -54,7 +54,7 @@ We tried to make everything easy to reuse, we hope anyone will be able to:
 
 # Narya
 
-The Narya API allows you to track soccer player from camera inputs, and evaluate them with an Expected Discounted Goal (EDG) Agent. This repository contains the implementation of the [following paper](https://). We also make available all of our trained agents, and the datasets we used as well. 
+The Narya API allows you to track soccer player from camera inputs, and evaluate them with an Expected Discounted Goal (EDG) Agent. This repository contains the implementation of the [following paper](https:/). We also make available all of our trained agents, and the datasets we used as well. 
 
 This Notebook's goal is to allow anyone without any access to soccer data to produce its own and analyze them with powerful tools. We also hope that by releasing our training procedures and datasets, better models will emerge and make this tool better iteratively. 
 
@@ -98,12 +98,12 @@ print("Image shape: {}".format(image.shape))
 visualize(image=image)
 ```
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_4_1.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_4_1.png)
 
 
 ## Tracking Soccer Players
 
-![]({{ site.url }}/imgs/2020-08-20-Narya/tracker_full.png)
+![]({{ site.url }}/imgs/2020-24-12-Narya/tracker_full.png)
 
 <center>
 <em>
@@ -167,12 +167,12 @@ ax = viz.plot_bbox(cv2.resize(image,(512,512)), bbox[0], score[0], cid[0], class
 plt.show()
 ```
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_10_0.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_10_0.png)
 
 
 Now that we have players' coordinates (and the ball position), we need to be able to transform them into 2D coordinates. This means finding the homography between our input image and a 2D representation of the field: 
 
-![]({{ site.url }}/imgs/2020-08-20-Narya/homography-estimation.png)
+![]({{ site.url }}/imgs/2020-24-12-Narya/homography-estimation.png)
 
 <center>
 <em>
@@ -269,7 +269,7 @@ visualize(template=template)
 ```
 
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_14_0.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_14_0.png)
 
 
 and let's make it easier to display on another image: 
@@ -283,7 +283,7 @@ visualize(template=template)
 ```
 
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_16_0.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_16_0.png)
 
 
 Now, let's import some utils functions, and warp our template with our predicted homography:
@@ -309,7 +309,7 @@ visualize(image=image,warped_template=cv2.resize(pred_warp, (1024,1024)))
 
 
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_18_1.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_18_1.png)
 
 You can also merge the warped template with your example: 
 
@@ -323,7 +323,7 @@ test = merge_template(image/255.,cv2.resize(pred_warp, (1024,1024)))
 visualize(image = test)
 ```
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_20_0.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_20_0.png)
 
 
 Our second approach is based on keypoints detection: $\mathbb{R} ^ {n \times n \times 3} \to \mathbb{R} ^ {p \times n \times n}$ we predict $p$ masks, each mask representing a particular keypoint on the field. The homography is computed knowing the coordinates of available keypoints on the image, by mapping them to the keypoints coordinates of the 2-dimensional field. The model is based on an EfficientNetb-3 backbone on top of a Feature Pyramid Networks (FPN) architecture to predict each keypoint's mask. We implemented our model using Segmentation Models.
@@ -357,7 +357,7 @@ visualize(
     )
 ```
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_22_1.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_22_1.png)
 
 
 Here, we display a concatenation of each keypoints we predicted. Now, since we know the "true" coordinates of each of them, we can precisely compute the related homography parameters. 
@@ -416,7 +416,7 @@ visualize(
     )
 ```
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_26_0.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_26_0.png)
 
 and if we merge them: 
 
@@ -425,7 +425,7 @@ test = merge_template(image/255.,cv2.resize(pred_warp, (1024,1024)))
 visualize(image = test)
 ```
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_28_0.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_28_0.png)
 
 ### ReIdentification
 
@@ -451,7 +451,7 @@ resized_image = cv2.resize(image,(512,512))
 plt.imshow(resized_image[y_1:y_2,x_1:x_2])
 ```
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_30_2.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_30_2.png)
 
 
 Now, we can create and call our model: 
@@ -557,7 +557,7 @@ visualize(image_0=image_0,
             image_50=image_50)
 ```
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_9_1.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_9_1.png)
 
 
 ## Football Tracker
@@ -683,7 +683,7 @@ visualize(image_0=image_0,
             image_50=image_50)
 ```
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_15_1.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_15_1.png)
 
 
 You can also easily create a movie of the tracking data, and display it: 
@@ -704,7 +704,7 @@ with imageio.get_writer('test_outputs/movie.mp4', mode='I',fps=20) as writer:
 
 <div align="middle">
 <video width="80%" controls>
-      <source src="{{ site.url }}/imgs/2020-08-20-Narya/movie.mp4" type="video/mp4">
+      <source src="{{ site.url }}/imgs/2020-24-12-Narya/movie.mp4" type="video/mp4">
 </video></div>
 
 ##  Process trajectories 
@@ -1303,7 +1303,7 @@ fig, ax, dfFrame = draw_frame(df,t=0,add_vector = False,fps=20)
 ```
 
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_13_0.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_13_0.png)
 
 
 We can also add a Voronoi Diagram and velocity vectors on our field: 
@@ -1317,7 +1317,7 @@ fig, ax, dfFrame = add_voronoi_to_fig(fig, ax, dfFrame)
 ```
 
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_15_0.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_15_0.png)
 
 
 ## Google Format
@@ -1369,7 +1369,7 @@ fig, ax, edg_map = add_edg_to_fig(fig, ax, map_value)
 ```
 
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_22_0.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_22_0.png)
 
 
 You can also plot the EDG value over time: 
@@ -1390,7 +1390,7 @@ fig, ax = draw_line(df_,1,20, smooth=True)
 
 ```
 
-![png]({{ site.url }}/imgs/2020-08-20-Narya/output_24_0.png)
+![png]({{ site.url }}/imgs/2020-24-12-Narya/output_24_0.png)
 
 # Training and datasets
 
