change some details

--- a/blog/_posts/2020-12-24-Narya.md
+++ b/blog/_posts/2020-12-24-Narya.md
@@ -64,13 +64,7 @@ Our library is split in 2: one part is to track soccer players, another one is t
 
 # Installation
 
-You can either install narya with pip: 
-
-```pip3 install --user narya```
-
-or from source:
-
-```git clone && cd narya && python3 setup.py```
+```git clone && cd narya && pip3 install -r requirements.txt```
 
 Let's start by importing some libraries and an image we will use during this Notebook: 
 
@@ -295,19 +289,10 @@ from narya.utils.image import torch_img_to_np_img, np_img_to_torch_img, denormal
 from narya.utils.utils import to_torch
 
 pred_homo = compute_homography(corners)[0]
-print("Predicted homography: {}".format(pred_homo))
-print('-'*20)
 pred_warp = warp_image(np_img_to_torch_img(template),to_torch(pred_homo),method='torch')
 pred_warp = torch_img_to_np_img(pred_warp[0])
 visualize(image=image,warped_template=cv2.resize(pred_warp, (1024,1024)))
 ```
-
-    Predicted homography: [[ 3.3973143e-01 -1.2927253e-03  4.6077079e-01]
-     [ 3.0281174e-01  1.7163661e+00  4.9089849e-02]
-     [ 4.1546736e-02  1.5496995e+00  1.0000000e+00]]
-    --------------------
-
-
 
 ![png]({{ site.url }}/imgs/2020-24-12-Narya/output_18_1.png)
 
@@ -488,13 +473,6 @@ Given a list of images, we want to track players and the ball and gather their t
 2. their distance measured by boxes IoU's
 
 When the entire list of images is processed, we compute a homography for each image. We then apply each homography to the player's coordinates.
-
-
-```python
-!pip3 install --user tensorflow==2.2.0
-!pip3 install --user tensorflow-probability
-!pip3 install --user dm-sonnet
-```
 
 ## Inputs
 
