feat: add flaneer.com backlinkgs

--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -34,6 +34,8 @@ MathJax.Hub.Queue(function() {
 
 # Codingame
 
+*I now work at [Flaneer](https://www.flaneer.com/), feel free to reach out if you are interested!*
+
 Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a vast range of codding languages, and I personally mainly used Java, Python & C++.
 What I enjoy the most is to build AI for multiplayer games: a card game, a quidditch match, a Tron battle, etc.
 
