--- a/blog/_posts/2020-12-24-Narya.md
+++ b/blog/_posts/2020-12-24-Narya.md
@@ -52,6 +52,8 @@ We tried to make everything easy to reuse, we hope anyone will be able to:
 * Evaluate players with our EDG Agent
 * and much more
 
+*I now work at [Flaneer](https://www.flaneer.com/), feel free to reach out if you are interested!*
+
 # Narya
 
 The Narya API allows you to track soccer player from camera inputs, and evaluate them with an Expected Discounted Goal (EDG) Agent. This repository contains the implementation of the [following paper](https:/). We also make available all of our trained agents, and the datasets we used as well. 
