--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -41,6 +41,8 @@ The Pi-Mobile V2, driving on its own
 </em>
 </center>
 
+*I now work at [Flaneer](https://www.flaneer.com/), feel free to reach out if you are interested!*
+
 When we started talking about this project with [Matthias](https://www.linkedin.com/in/matthias-cremieux-4b1222153/) and then [Arthur](https://www.linkedin.com/in/arthur-verrez/), we knew that both building a Lego motorized car, and learning to drive with real-life Deep Reinforcement Learning was [possible](https://arxiv.org/pdf/1807.00412.pdf). However, we wanted to do both at the same time. We also wanted to try another approach: Imitation Learning. We recently acquired a [Raspberry Pi 4b](https://www.raspberrypi.org/products/raspberry-pi-4-model-b/) and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 vehicles and used 2 methods of learning :
 
 * a first model (that looks terrible), driving with a Deep Reinforcement Learning Agent
